@@ -2,7 +2,7 @@
 /**
  *
  *
- * Copyright 2010 Josselin Jacquard
+ * Copyright 2010-2014 Josselin Jacquard - Bouguin Régis
  *
  * This file and the mod_abs2 module is distributed under GPL version 3, or
  * (at your option) any later version.
@@ -33,7 +33,7 @@ if ($reinit_filtre == 'y') {
     $_SESSION['filtre_recherche'] = Array();
     $_SESSION['filtre_recherche']['order'] = 'des_id';
 } else {
-    $liste_parametres_sauf_checkbox = array('order', 'filter_notification_id', 'filter_traitement_id', 'filter_saisie_id', 'filter_utilisateur', 'filter_eleve', 'filter_classe', 'filter_groupe', 'filter_aid',
+    $liste_parametres_sauf_checkbox = array('order', 'filter_classe', 'filter_notification_id', 'filter_traitement_id', 'filter_saisie_id', 'filter_utilisateur', 'filter_eleve', 'filter_classe', 'filter_groupe', 'filter_aid',
 	'filter_type', 'filter_type_notification','filter_statut_notification','filter_motif', 'filter_justification', 'filter_date_debut_saisie_debut_plage', 'filter_date_debut_saisie_fin_plage',
 	'filter_date_fin_saisie_debut_plage', 'filter_date_fin_saisie_fin_plage',
 	'filter_creneau', 'filter_cours', 'filter_date_creation_traitement_debut_plage', 'filter_date_creation_traitement_fin_plage','filter_date_creation_saisie_debut_plage', 'filter_date_creation_saisie_fin_plage','filter_date_creation_notification_debut_plage', 'filter_date_creation_notification_fin_plage',
