@@ -5,6 +5,8 @@
 
 Gepi-master (Version de développement)
 ===========================
+Abs2
+- Sélection des traitements sur la classe dans liste_traitements.php
 
 Gepi-1.6.5 (14/06/2014)
 ===========================
